feat: added new bis. log on courier and transport type, fixed lang and tests